--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
         "lusitanian/oauth": "~0.2",
         "symfony/console": "~2.4",
         "symfony/process": "~2.4",
-        "symfony/yaml": "~2.4",
-        "jms/serializer": "~0.15"
+        "symfony/yaml": "~2.4"
     },
     "suggest": {
         "kriswallsmith/spork":  "Allows parallel job batch processing."
