added mock files, added tests

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -4,6 +4,7 @@
     <testsuites>
         <testsuite name="Hydra Test Suite">
             <directory suffix="Test.php">./tests/</directory>
+            <directory suffix="Stub.php">./tests/</directory>
         </testsuite>
     </testsuites>
 
